# example_project

./: 404.html  LICENSE  LICENSE.txt  README.txt  example_project.toml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy_docs.yml
Motor_design_functions/: motordesign.py  motordesign_functions.py  motordesign_keyelements.py
docs/: index.md
example_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
example_project/Motor_design_functions/: motordesign.py
example_project/kmeans_code/: kmeans.py
kmeans_code/: kmeans.py
