[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]
[project]
name = "mygeopy"
version = "0.0.1a1"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [
    {name = "Maggie May", email = "maggie.may@gmail.com"}
]
[project.optional-dependencies]
docs = [
    "mkdocs-material"
]

