[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "mygeopy"
version = "0.1.0a0"
description = "My Python package for working with geometry."
authors = [{name = "<Your name>", email="Your_email@domain.com"}]
license = "MIT"
license-files = ["LICENSE.txt"]
requires-python >= 3.12
[project.urls]
Homepage = "https://github.com/zhukunw472/example_project"
[project.optional-dependencies]
tests = ["pytest"]
docs = [
    "mkdocs-material"
]
[tool.pytest.ini_options]
addopts = "--doctest-modules"

